--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 
 /* Your CSS Code here. */
 table {
-	border: 1px solid black;
+	border: 1px solid rgb(0, 0, 0);
 }
 
 body table tr td table {
@@ -18,7 +18,7 @@ body table tr td table {
 }
 
 th {
-	border: 1px solid black;
+	border: 1px solid rgb(0, 0, 0);
 }
 
 td {
